tests/fixtures/valid/operator_add_int.torel
unit fixtures.operator_add_int;

export proc main() -> Int32 {
    40 + 2
}
