tests/fixtures/invalid/operator_add_exit.torel
unit fixtures.operator_add_exit;

export proc main() -> Exit {
    Exit.ok + Exit.ok
}
